infra/frontro/blazn-identity-dev/service-identity-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-api
  namespace: blazn-identity-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: service
    port: 8080
    protocol: TCP
    targetPort: service
  selector:
    app: identity-api
  sessionAffinity: None
  type: ClusterIP
