infra/frontro/blazn-identity-dev/service-identity-login.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-login
  namespace: blazn-identity-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: login
    port: 3000
    protocol: TCP
    targetPort: login
  - name: gate
    port: 3100
    protocol: TCP
    targetPort: gate
  selector:
    app: identity-login
  sessionAffinity: None
  type: ClusterIP
