infra/frontro/blazn-identity-dev/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: blazn-identity-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: service
    port: 5432
    protocol: TCP
    targetPort: service
  selector:
    app: identity-postgres
  sessionAffinity: None
  type: ClusterIP
