infra/frontro/blazn-identity-dev/networkpolicy-api-login.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-login
  namespace: blazn-identity-dev
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: identity-login
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: identity-api
  policyTypes:
  - Ingress
