infra/frontro/blazn-identity-dev/networkpolicy-api-mail.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-mail
  namespace: blazn-identity-dev
spec:
  egress:
  - ports:
    - port: 1025
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: identity-mail
  podSelector:
    matchLabels:
      app: identity-api
  policyTypes:
  - Egress
