infra/frontro/blazn-identity-dev/networkpolicy-api-sendgrid.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-sendgrid
  namespace: blazn-identity-dev
spec:
  egress:
  - ports:
    - port: 587
      protocol: TCP
    to:
    - ipBlock:
        cidr: 35.160.29.225/32
    - ipBlock:
        cidr: 35.165.162.75/32
    - ipBlock:
        cidr: 44.245.169.87/32
    - ipBlock:
        cidr: 52.27.252.78/32
    - ipBlock:
        cidr: 52.32.95.20/32
    - ipBlock:
        cidr: 52.34.19.139/32
    - ipBlock:
        cidr: 52.89.132.112/32
    - ipBlock:
        cidr: 54.148.37.154/32
    - ipBlock:
        cidr: 54.214.254.165/32
  podSelector:
    matchLabels:
      app: identity-api
  policyTypes:
  - Egress
