infra/frontro/blazn-identity-dev/networkpolicy-dedicated-db-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dedicated-db-egress
  namespace: blazn-identity-dev
spec:
  egress:
  - ports:
    - port: 5432
      protocol: TCP
    to:
    - ipBlock:
        cidr: 192.168.0.105/32
  podSelector:
    matchLabels:
      app: identity-api
  policyTypes:
  - Egress
