infra/frontro/blazn-identity-dev/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: blazn-identity-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
