infra/frontro/blazn-identity-dev/networkpolicy-identity-edge-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: identity-edge-api
  namespace: blazn-identity-dev
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: moments-direct
      podSelector:
        matchLabels:
          app: moments-direct-gateway
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: identity-api
  policyTypes:
  - Ingress
