infra/frontro/blazn-identity-dev/networkpolicy-postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress
  namespace: blazn-identity-dev
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: identity-api
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app: identity-postgres
  policyTypes:
  - Ingress
